--- a/packedgo/back/order-service/.env
+++ b/packedgo/back/order-service/.env
@@ -18,6 +18,12 @@ EVENT_SERVICE_URL=http://event-service:8086/api
 AUTH_SERVICE_URL=http://auth-service:8081/api
 PAYMENT_SERVICE_URL=http://payment-service:8085/api
 
+# Mail Configuration (Gmail SMTP)
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=packedgo.events@gmail.com
+MAIL_PASSWORD=oopk bpgu tllp uprg
+
 # Logging
 LOG_LEVEL_ROOT=INFO
 LOGGING_LEVEL_ORDER=DEBUG
