--- a/packedgo/back/order-service/src/main/resources/application.properties
+++ b/packedgo/back/order-service/src/main/resources/application.properties
@@ -39,6 +39,20 @@ app.cart.expiration-minutes=${CART_EXPIRATION_MINUTES}
 app.cart.cleanup-interval-minutes=${CART_CLEANUP_INTERVAL_MINUTES}
 
 # ==============================================
+# MAIL CONFIGURATION
+# ==============================================
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# ==============================================
 # DOCKER COMPOSE CONFIGURATION
 # ==============================================
 spring.docker.compose.enabled=false
