--- a/packedgo/back/docker-compose.yml
+++ b/packedgo/back/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
-      - EVENT_SERVICE_URL=http://event-service:8086
+      - EVENT_SERVICE_URL=http://event-service:8086/api
     depends_on:
       users-db:
         condition: service_healthy
