--- a/packedgo/back/event-service/src/main/resources/application.properties
+++ b/packedgo/back/event-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8086
 server.servlet.context-path=/api
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5433/event_db
-spring.datasource.username=admin
-spring.datasource.password=admin123
+spring.datasource.url=jdbc:postgresql://localhost:5435/event_db
+spring.datasource.username=event_user
+spring.datasource.password=event_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # HikariCP Configuration - Disable autocommit to allow Spring transaction management
